part2-sprint6: 기본 요구사항 페이징 제외 구현