@@ -1,17 +1,17 @@
 package com.spirnt.mission.discodeit.service.implement;
 
 import com.spirnt.mission.discodeit.dto.userStatus.UserStatusCreateRequest;
+import com.spirnt.mission.discodeit.dto.userStatus.UserStatusDto;
 import com.spirnt.mission.discodeit.dto.userStatus.UserStatusUpdateRequest;
+import com.spirnt.mission.discodeit.enity.User;
 import com.spirnt.mission.discodeit.enity.UserStatus;
 import com.spirnt.mission.discodeit.repository.UserRepository;
 import com.spirnt.mission.discodeit.repository.UserStatusRepository;
 import com.spirnt.mission.discodeit.service.UserStatusService;
 import java.time.Instant;
 import java.util.List;
-import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -23,87 +23,61 @@ public class UserStatusServiceImpl implements UserStatusService {
   private final UserRepository userRepository;
 
   @Override
-  public UserStatus create(UserStatusCreateRequest userStatusCreateRequest) {
+  public UserStatusDto create(UserStatusCreateRequest userStatusCreateRequest) {
+    UUID userId = userStatusCreateRequest.userId();
     // User가 존재하지 않으면 예외 발생
-    if (!userRepository.existsById(userStatusCreateRequest.userId())) {
-      throw new NoSuchElementException("User ID Not Found");
-    }
+    User user = userRepository.findById(userId)
+        .orElseThrow(() -> new NoSuchElementException("User with id: " + userId + " not found"));
     // 이미 User와 관련된 객체가 존재하면 예외 발생
-    if (userStatusRepository.findAll().values().stream()
-        .anyMatch(userStatus -> userStatus.getUserId().equals(userStatusCreateRequest.userId()))) {
-      throw new IllegalArgumentException("The ReadStatus with UserId and ChannelId Already Exists");
+    if (userStatusRepository.existsByUserId(userId)) {
+      throw new IllegalArgumentException("The UserStatus with UserId" + userId + "Already Exists");
     }
-    UserStatus userStatus = new UserStatus(userStatusCreateRequest.userId(),
-        userStatusCreateRequest.type(), Instant.now());
-    userStatusRepository.save(userStatus);
-    return userStatus;
+    UserStatus userStatus = userStatusRepository.save(new UserStatus(user,
+        userStatusCreateRequest.type(), Instant.now()));
+    return UserStatusDto.from(userStatus);
   }
 
   @Override
-  public UserStatus find(UUID userStatusId) {
+  public UserStatusDto find(UUID userStatusId) {
     UserStatus userStatus = userStatusRepository.findById(userStatusId)
         .orElseThrow(() -> new NoSuchElementException("UserStatus ID Not Found"));
-    return userStatus;
+    return UserStatusDto.from(userStatus);
   }
 
   @Override
-  public List<UserStatus> findAll() {
-    Map<UUID, UserStatus> map = userStatusRepository.findAll();
-    List<UserStatus> list = map.values().stream()
-        .map(userStatus -> this.find(userStatus.getId()))
-        .collect(Collectors.toList());
-    return list;
+  public List<UserStatusDto> findAll() {
+    return userStatusRepository.findAll().stream()
+        .map(UserStatusDto::from)
+        .toList();
   }
 
   @Override
-  public UserStatus update(UUID userStatusId, UserStatusUpdateRequest userStatusUpdateRequest,
+  public UserStatusDto update(UUID userStatusId, UserStatusUpdateRequest userStatusUpdateRequest,
       Instant serverTime) {
+    userStatusRepository.updateById(userStatusId, userStatusUpdateRequest.newLastActiveAt());
     UserStatus userStatus = userStatusRepository.findById(userStatusId)
-        .orElseThrow(() -> new NoSuchElementException("UserStatus ID Not Found"));
-    userStatus.update(userStatusUpdateRequest.newLastActiveAt());
-    userStatusRepository.save(userStatus);
-    return userStatus;
+        .orElseThrow(
+            () -> new NoSuchElementException("UserStatus with id:" + userStatusId + " not found"));
+    return UserStatusDto.from(userStatus);
   }
 
   @Override
-  public UserStatus updateByUserId(UUID userId, UserStatusUpdateRequest userStatusUpdateRequest) {
+  public UserStatusDto updateByUserId(UUID userId,
+      UserStatusUpdateRequest userStatusUpdateRequest) {
     // User가 존재하지 않으면 예외 발생
     if (!userRepository.existsById(userId)) {
       throw new NoSuchElementException("UserStatus with userId" + userId + " not found");
     }
-    Map<UUID, UserStatus> map = userStatusRepository.findAll();
-    UserStatus userStatus = map.values().stream()
-        .filter(value -> value.getUserId().equals(userId))
-        .findAny()
+    UserStatus userStatus = userStatusRepository.findByUserId(userId)
         .orElseThrow(() -> new NoSuchElementException("UserStatus ID Not Found"));
+    userStatusRepository.updateById(userStatus.getId(), userStatusUpdateRequest.newLastActiveAt());
     userStatus.update(userStatusUpdateRequest.newLastActiveAt());
-    userStatusRepository.save(userStatus);
-    return userStatus;
+    return UserStatusDto.from(userStatus);
   }
 
   @Override
   public void delete(UUID userStatusId) {
-    userStatusRepository.delete(userStatusId);
+    userStatusRepository.deleteById(userStatusId);
   }
 
-  @Override
-  public UserStatus findByUserId(UUID userId) {
-    List<UserStatus> list = findAll();
-    UUID userStatusId = list.stream()
-        .filter(userStatus -> userStatus.getUserId().equals(userId))
-        .map(userStatus -> userStatus.getId())
-        .findAny()
-        .orElseThrow(() -> new NoSuchElementException("UserStatus ID Not Found"));
-    return find(userStatusId);
-  }
-
-  @Override
-  public void deleteByUserId(UUID userId) {
-    Map<UUID, UserStatus> map = userStatusRepository.findAll();
-    UserStatus userStatus = map.values().stream()
-        .filter(value -> value.getUserId().equals(userId))
-        .findAny()
-        .orElseThrow(() -> new NoSuchElementException("UserStatus ID Not Found"));
-    delete(userStatus.getId());
-  }
 }
